--- a/po/da.po
+++ b/po/da.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: da\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-04-15 21:07+0200\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-05-10 20:24+0200\n"
 "Last-Translator: Keld Simonsen <keld@rap.dk>\n"
 "Language-Team:  <da@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -872,9 +872,8 @@ msgid ""
 msgstr ""
 
 #: ../src/vmm-add-hardware.glade.h:33
-#, fuzzy
 msgid "Set _fixed MAC address for this NIC?"
-msgstr "Angivet MAC-adresse:"
+msgstr ""
 
 #: ../src/vmm-add-hardware.glade.h:34 ../src/vmm-create.glade.h:85
 msgid "Shared Physical Device"
@@ -1763,9 +1762,9 @@ msgid "NAT to physical device %s"
 msgstr ""
 
 #: ../../po/../src/virtManager/createnet.py:152
-#, fuzzy, python-format
+#, python-format
 msgid "%d addresses"
-msgstr "MAC-adresse"
+msgstr "%d-adresser"
 
 #: ../../po/../src/virtManager/createnet.py:154
 msgid "Public"
@@ -1781,27 +1780,23 @@ msgstr ""
 
 #: ../../po/../src/virtManager/createnet.py:304
 #: ../../po/../src/virtManager/createnet.py:308
-#, fuzzy
 msgid "Invalid Network Name"
-msgstr "Ugyldigt systemnavn"
+msgstr "Ugyldigt netværksnavn"
 
 #: ../../po/../src/virtManager/createnet.py:305
-#, fuzzy
 msgid "Network name must be non-blank and less than 50 characters"
-msgstr "Systemnavnet skal være ikke-blankt og kortere end 50 tegn"
+msgstr "Netværksnavnet skal være ikke-blankt og kortere end 50 tegn"
 
 #: ../../po/../src/virtManager/createnet.py:309
-#, fuzzy
 msgid "Network name may contain alphanumeric and '_' characters only"
-msgstr "Systemnavn må kun indeholde alfanumeriske og '_' tegn"
+msgstr "Netværksnavn må kun indeholde alfanumeriske og '_' tegn"
 
 #: ../../po/../src/virtManager/createnet.py:316
 #: ../../po/../src/virtManager/createnet.py:321
 #: ../../po/../src/virtManager/createnet.py:326
 #: ../../po/../src/virtManager/createnet.py:331
-#, fuzzy
 msgid "Invalid Network Address"
-msgstr "Ugyldig lagringsadresse"
+msgstr "Ugyldig netværksadresse"
 
 #: ../../po/../src/virtManager/createnet.py:317
 msgid "The network address could not be understood"
@@ -1823,9 +1818,8 @@ msgstr ""
 #: ../../po/../src/virtManager/createnet.py:344
 #: ../../po/../src/virtManager/createnet.py:349
 #: ../../po/../src/virtManager/createnet.py:353
-#, fuzzy
 msgid "Invalid DHCP Address"
-msgstr "Ugyldig PV-media-adresse"
+msgstr "Ugyldig DHCP-adresse"
 
 #: ../../po/../src/virtManager/createnet.py:341
 msgid "The DHCP start address could not be understood"
@@ -1932,9 +1926,8 @@ msgstr ""
 
 #: ../../po/../src/virtManager/addhardware.py:248
 #: ../../po/../src/virtManager/create.py:459
-#, fuzzy
 msgid "Virtual network"
-msgstr "Virtuel _maskine"
+msgstr "Virtuelt netværk"
 
 #: ../../po/../src/virtManager/addhardware.py:251
 #: ../../po/../src/virtManager/create.py:462
@@ -1954,9 +1947,8 @@ msgid "There are no more available virtual disk device nodes"
 msgstr ""
 
 #: ../../po/../src/virtManager/addhardware.py:356
-#, fuzzy
 msgid "Creating Storage File"
-msgstr "Lokalisér eller opret ny lagringsfil"
+msgstr "Opretter lagringsfil"
 
 #: ../../po/../src/virtManager/addhardware.py:357
 #, fuzzy
@@ -2056,7 +2048,7 @@ msgstr ""
 #: ../../po/../src/virtManager/create.py:867
 #, fuzzy
 msgid "Invalid MAC address"
-msgstr "Ugyldig PV-media-adresse"
+msgstr "Ugyldig DHCP-adresse"
 
 #: ../../po/../src/virtManager/addhardware.py:511
 msgid "MAC adrress must be 17 characters"
@@ -2374,50 +2366,3 @@ msgstr "VCPU'er"
 
 #~ msgid "_Read only connection"
 #~ msgstr "Kun _læsbar forbindelse"
-
-#~ msgid "Guest Install Error"
-#~ msgstr "Fejl ved installation af gæst"
-
-#~ msgid "00:16:3e:"
-#~ msgstr "00:16:3e:"
-
-#~ msgid ":"
-#~ msgstr ":"
-
-#~ msgid ""
-#~ "<b>Tip:</b> Acceptable values for hex digits are the numbers 0-9 and the "
-#~ "letters A-F"
-#~ msgstr ""
-#~ "<b>Tips:</b> Gyldige værdier for hextal er cifrene 0-9 og bogstaverne A-F"
-
-#~ msgid "Add Virtual NIC"
-#~ msgstr "Tilføj virtuel NIC"
-
-#~ msgid "Add virtual NIC with:"
-#~ msgstr "Tilføj virtuel NIC med:"
-
-#~ msgid "Randomly generated MAC address"
-#~ msgstr "Tilfældig genereret MAC-adresse"
-
-#~ msgid "mac-addr-random"
-#~ msgstr "mac-addr-random"
-
-#~ msgid "<b>Disk image:</b>"
-#~ msgstr "<b>Diskaftryk:</b>"
-
-#~ msgid "<b>Disk size:</b>"
-#~ msgstr "<b>Diskstørrelse:</b>"
-
-#~ msgid ""
-#~ "Press finish to create a new virtual machine with\n"
-#~ "this configuration."
-#~ msgstr ""
-#~ "Tryk færdiggør for at oprette en ny virtuel maskine med\n"
-#~ "denne konfiguration."
-
-#~ msgid ""
-#~ "<b>Tip:</b> File location paths are as seen from the physical host. Mount "
-#~ "points are as seen from the virtual machine."
-#~ msgstr ""
-#~ "<b>Tip:</b> Filsøgestier er som de ses fra den fysiske vært. "
-#~ "Monteringspunkter er som de ses fra værtsmaskinen."
