--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-05-02 12:00-0300\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-06-22 11:34-0300\n"
 "Last-Translator: Domingo Becker <beckerde@hotmail.com>\n"
 "Language-Team: Spanish <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -381,7 +381,6 @@ msgstr ""
 "para asignar invitados conectados a la red virtual"
 
 #: ../src/vmm-create-net.glade.h:46
-#, fuzzy
 msgid ""
 "Please indicate whether this virtual network should be connected to the "
 "physical network."
@@ -1358,14 +1357,12 @@ msgid "<b>Memory</b>"
 msgstr "<b>Memoria</b>"
 
 #: ../src/vmm-details.glade.h:14
-#, fuzzy
 msgid ""
 "<b>Tip:</b> 'Source device' refers to the name of the device as seen from "
 "the host OS."
 msgstr ""
-"<b>Consejo:</b> 'fuente' se refiere a la información vista desde el SO "
-"anfitrión, mientras que 'destino' se refiere a la información vista por el "
-"SO invitado"
+"<b>Consejo:</b> 'dispositivo fuente' se refiere al nombre del dispostivo tal "
+"como lo ve el SO anfitrión."
 
 #: ../src/vmm-details.glade.h:15
 msgid ""
