--- a/po/fi.po
+++ b/po/fi.po
@@ -6,14 +6,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: virt-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-04-20 19:51+0200\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-06-23 19:30+0200\n"
 "Last-Translator: Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>\n"
 "Language-Team: Finnish <laatu@lokalisointi.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../src/virt-manager.desktop.in.in.h:1
@@ -382,7 +381,6 @@ msgstr ""
 "virtuaaliverkkoon kytketyille laitteille."
 
 #: ../src/vmm-create-net.glade.h:46
-#, fuzzy
 msgid ""
 "Please indicate whether this virtual network should be connected to the "
 "physical network."
@@ -1353,13 +1351,12 @@ msgid "<b>Memory</b>"
 msgstr "<b>Muisti</b>"
 
 #: ../src/vmm-details.glade.h:14
-#, fuzzy
 msgid ""
 "<b>Tip:</b> 'Source device' refers to the name of the device as seen from "
 "the host OS."
 msgstr ""
-"<b>Vinkki:</b> ”lähde” tarkoittaa isäntäkäyttöjärjestelmän näkemää tietoa, "
-"”kohde” tarkoittaa vierasjärjestelmän näkemää tietoa"
+"<b>Vinkki:</b> ”lähdelaite” tarkoittaa isäntäkäyttöjärjestelmän näkemää "
+"laitteen nimeä"
 
 #: ../src/vmm-details.glade.h:15
 msgid ""
@@ -1609,7 +1606,7 @@ msgstr "Käsitellään..."
 #. Damned if we do, damned if we dont :-)(
 #: ../../po/../src/virt-manager.py.in:74
 msgid "Unable to initialize GTK: "
-msgstr "GTK:n alustus ei onnistu:"
+msgstr "Ei voida alustaa GTK:ta"
 
 #: ../src/virt-manager.schemas.in.h:1
 msgid "Show VCPU count in summary"
