--- a/po/it.po
+++ b/po/it.po
@@ -1,4 +1,4 @@
-# translation of it.po to italiano
+# translation of it.po to Italiano
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER, 2006.
 #
@@ -7,10 +7,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-05-04 22:18+0200\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-06-09 16:38+0200\n"
 "Last-Translator: Francesco Tombolini <tombo@adamantio.net>\n"
-"Language-Team: italiano <fedora-trans-it@redhat.com>\n"
+"Language-Team: Italiano <fedora-trans-it@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -76,7 +76,7 @@ msgstr "Arr_estare"
 
 #: ../src/vmm-console.glade.h:8
 msgid "Save this password in your keyring"
-msgstr "Salvare questa password nel vostro keyring"
+msgstr "Salvare questa password nel keyring"
 
 #: ../src/vmm-console.glade.h:9
 msgid "Screenshot"
@@ -989,10 +989,9 @@ msgid ""
 "storage, to your virtual system after it has been created using the same "
 "tools you would on a physical system.</small>"
 msgstr ""
-"<small><b>Suggerimento:</b> È possibile aggiungere storage aggiuntivo, "
-"incluso lo storage montato sulla rete, sul vostro sistema virtuale dopo la "
-"sua creazione utilizzando gli stessi tool usati su di un sistema fisico.</"
-"small>"
+"<small><b>Suggerimento:</b> È possibile aggiungere altro storage, incluso lo "
+"storage montato sulla rete, sul sistema virtuale dopo la creazione "
+"utilizzando gli stessi strumenti usati su un sistema fisico.</small>"
 
 #: ../src/vmm-create.glade.h:30
 msgid ""
@@ -1031,8 +1030,8 @@ msgid ""
 "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Naming your "
 "virtual system </span>"
 msgstr ""
-"<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Nominare il "
-"vostro sistema virtuale </span>"
+"<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Dare un nome al "
+"sistema virtuale </span>"
 
 #: ../src/vmm-create.glade.h:37
 msgid ""
@@ -1044,7 +1043,7 @@ msgstr ""
 
 #: ../src/vmm-create.glade.h:38
 msgid "A <b>name</b> for your new virtual system"
-msgstr "Un <b>nome</b> per il vostro nuovo sistema virtuale"
+msgstr "Un <b>nome</b> per il nuovo sistema virtuale"
 
 #: ../src/vmm-create.glade.h:41
 msgid "CPU architecture:"
@@ -1179,10 +1178,9 @@ msgid ""
 "for your new virtual system. This space will be used to install the virtual "
 "system's operating system."
 msgstr ""
-"Vi preghiamo di indicare su questo sistema host fisico, il metodo di "
-"assegnazione dello spazio  per il vostro nuovo sistema virtuale. Questo "
-"spazio verrà utilizzato per installare il sistema operativo del sistema "
-"virtuale."
+"Si prega di indicare come si desidera assegnare lo spazio di questo sistema "
+"fisico per il nuovo sistema virtuale. Questo spazio verrà utilizzato per "
+"installare il sistema operativo del sistema virtuale."
 
 #: ../src/vmm-create.glade.h:81
 msgid ""
@@ -1209,10 +1207,10 @@ msgid ""
 "system. Optionally you can provide the URL for a kickstart file that "
 "describes your system:"
 msgstr ""
-"Vi preghiamo di indicare la disponibilità del media d'installazione per il "
-"sistema operativo che desiderate installare, su questo sistema virtuale "
+"Si prega di indicare dove è disponibile il media d'installazione per il "
+"sistema operativo che si desidera installare, su questo sistema virtuale "
 "<b>paravirtualizzato</b>. È possibile fornire facoltativamente, l'URL per un "
-"file di kickstart che descrive il vostro sistema:"
+"file di kickstart che descriva il sistema:"
 
 #: ../src/vmm-create.glade.h:84
 #, fuzzy
@@ -1280,8 +1278,7 @@ msgstr ""
 #: ../src/vmm-create.glade.h:99
 msgid "You will need to choose a virtualization method for your new system:"
 msgstr ""
-"È necessario selezionare un metodo di virtualizzazione per il vostro nuovo "
-"sistema:"
+"È necessario selezionare un metodo di virtualizzazione per il nuovo sistema:"
 
 #: ../src/vmm-create.glade.h:100
 msgid "_Browse..."
@@ -2319,8 +2316,8 @@ msgstr "VCPU"
 #~ "Your hardware does not appear to support full virtualization. Only "
 #~ "paravirtualized guests will be available on this hardware."
 #~ msgstr ""
-#~ "Il vostro hardware non supporta un processo di virtualizzazione completo. "
-#~ "Su questo hardware saranno disponibili solo guest paravirtualizzati."
+#~ "L'hardware non sembra supportare la virtualizzazione completa. Su questo "
+#~ "hardware saranno disponibili solo guest paravirtualizzati."
 
 #~ msgid "ISO Path Required"
 #~ msgstr "Percorso ISO richiesto"
