--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -7,13 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: virt-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-04-16 22:54-0000\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-06-21 20:35-0000\n"
 "Last-Translator: Miloš Komarčević <kmilos@gmail.com>\n"
-"Language-Team: Serbian (sr) <fedora@prevod.org>\n"
+"Language-Team: Serbian (sr) <fedora-trans-sr@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: ../src/virt-manager.desktop.in.in.h:1
 #, fuzzy
@@ -379,7 +381,6 @@ msgstr ""
 "povezanim na virtuelnu mrežu"
 
 #: ../src/vmm-create-net.glade.h:46
-#, fuzzy
 msgid ""
 "Please indicate whether this virtual network should be connected to the "
 "physical network."
@@ -845,7 +846,7 @@ msgstr ""
 
 #: ../src/vmm-add-hardware.glade.h:34 ../src/vmm-create.glade.h:85
 msgid "Shared Physical Device"
-msgstr "Deljnjni fiziki uređaj"
+msgstr "Deljeni fiziki uređaj"
 
 #: ../src/vmm-add-hardware.glade.h:35 ../src/vmm-create.glade.h:86
 msgid "Simple F_ile:"
@@ -1346,21 +1347,21 @@ msgid "<b>Memory</b>"
 msgstr "<b>Memorija</b>"
 
 #: ../src/vmm-details.glade.h:14
-#, fuzzy
 msgid ""
 "<b>Tip:</b> 'Source device' refers to the name of the device as seen from "
 "the host OS."
 msgstr ""
-"<b>Savet:</b> 'source' refers to information seen from the host OS, while "
-"'target' refers to information seen from the guest OS"
+"<b>Savet:</b> „Izvorni uređaj“ se odnosi na ime uređaja kako se pojavljuje u "
+"domaćinskom OS-u."
 
 #: ../src/vmm-details.glade.h:15
 msgid ""
 "<b>Tip:</b> 'source' refers to information seen from the host OS, while "
 "'target' refers to information seen from the guest OS"
 msgstr ""
-"<b>Savet:</b> 'source' refers to information seen from the host OS, while "
-"'target' refers to information seen from the guest OS"
+"<b>Savet:</b> „izvorni“ se odnosi na podatke kako se pojavljuju u "
+"domaćinskom OS-u, dok se „ciljni“ odnosi na podatke kako se pojavljuju u "
+"gostujućem OS-u"
 
 #: ../src/vmm-details.glade.h:16
 msgid ""
@@ -2315,6 +2316,3 @@ msgstr "VCPU-i"
 
 #~ msgid "You must specify a URL for the install image for the guest install"
 #~ msgstr "Morate navesti URL do odraza instalacije za instalaciju gosta"
-
-#~ msgid "_Read only connection"
-#~ msgstr "Veza samo za _čitanje"
