--- a/po/ja.po
+++ b/po/ja.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-05-03 09:16+0900\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-06-30 13:17+0900\n"
 "Last-Translator: Hyu_gabaru Ryu_ichi <hyu_gabaru@yahoo.co.jp>\n"
 "Language-Team: Japanese <fedora-trans-ja@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgstr "Copyright (C) 2006 Red Hat Inc."
 
 #: ../src/vmm-about.glade.h:2
 msgid "Powered by libvirt"
-msgstr "Powered by libvirt"
+msgstr "libvirt で作動"
 
 #: ../src/vmm-about.glade.h:4
 msgid "http://virt-manager.et.redhat.com/"
@@ -383,12 +383,11 @@ msgstr ""
 "できるアドレスの範囲を選んでください"
 
 #: ../src/vmm-create-net.glade.h:46
-#, fuzzy
 msgid ""
 "Please indicate whether this virtual network should be connected to the "
 "physical network."
 msgstr ""
-"この仮想ネットワークが物理ネットワークに接続されるべきかどうかを選んでくださ"
+"この仮想ネットワークが物理ネットワークに接続されるべきかどうかを示してくださ"
 "い。"
 
 #: ../src/vmm-create-net.glade.h:47
@@ -1351,13 +1350,11 @@ msgid "<b>Memory</b>"
 msgstr "<b>メモリ</b>"
 
 #: ../src/vmm-details.glade.h:14
-#, fuzzy
 msgid ""
 "<b>Tip:</b> 'Source device' refers to the name of the device as seen from "
 "the host OS."
 msgstr ""
-"<b>ヒント:</b> 'ソース' はホスト OS から見える情報を意味し、一方'ターゲット' "
-"はゲスト OS から見える情報を意味します。"
+"<b>ヒント:</b> 'ソースデバイス' はホスト OS から見える名前を意味します。"
 
 #: ../src/vmm-details.glade.h:15
 msgid ""
@@ -2183,7 +2180,7 @@ msgid ""
 "The mouse pointer has been restricted to the virtual console window. To "
 "release the pointer press the key pair Ctrl+Alt"
 msgstr ""
-"マウスポインターは仮想コンソールウィンドーに制限されています。ポインターを解"
+"マウスポインターは仮想コンソールウィンドウに制限されています。ポインターを解"
 "放するには Ctrl+Alt を押してください。"
 
 #: ../../po/../src/virtManager/console.py:147
