--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
-"PO-Revision-Date: 2007-04-27 19:27-0300\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
+"PO-Revision-Date: 2007-06-22 14:18-0300\n"
 "Last-Translator: Igor Pires Soares <igor@projetofedora.org>\n"
 "Language-Team: Brazilian Portuguese <fedora-trans-pt_br@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -386,11 +386,11 @@ msgstr ""
 "utilizar para alocar convidados anexados à rede virtual."
 
 #: ../src/vmm-create-net.glade.h:46
-#, fuzzy
 msgid ""
 "Please indicate whether this virtual network should be connected to the "
 "physical network."
-msgstr "Por favor, indique se a rede virtual deve ser conectada à rede física."
+msgstr ""
+"Por favor, indique se essa rede virtual deve ser conectada à rede física."
 
 #: ../src/vmm-create-net.glade.h:47
 #: ../../po/../src/virtManager/createnet.py:156
@@ -1367,13 +1367,12 @@ msgid "<b>Memory</b>"
 msgstr "<b>Memória:</b>"
 
 #: ../src/vmm-details.glade.h:14
-#, fuzzy
 msgid ""
 "<b>Tip:</b> 'Source device' refers to the name of the device as seen from "
 "the host OS."
 msgstr ""
-"<b>Dica:</b> A \"origem\" se refere às informações vistas no SO do host, "
-"enquanto o \"destino\" se refere às informações vistas no SO do convidado"
+"<b>Dica:</b> O \"dispositivo de origem\" se refere ao nome do dispositivo "
+"visto pelo SO host."
 
 #: ../src/vmm-details.glade.h:15
 msgid ""
