--- a/po/tr.po
+++ b/po/tr.po
@@ -7,9 +7,9 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: virt-manager VERSION\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-07-04 13:10-0400\n"
+"POT-Creation-Date: 2007-07-04 13:15-0400\n"
 "PO-Revision-Date: 2006-11-12 18:30+0200\n"
 "Last-Translator: supernova <(null)>\n"
 "Language-Team: English <en@li.org>\n"
