Initial prototype switching code over to using GTK VNC

--- a/README
+++ b/README
@@ -34,6 +34,7 @@ please report any success to the mailing lists
  gnome-python-desktop >= 2.15.4
  libxml2-python >= 2.6.23
  vte >= 0.12.2
+ gtk-vnc >= 0.0.1
  python-virtinst >= 0.103.0
 
 The latter is available from
