Allow for passing arbitrary kernel args to paravirt guests -- thanks Alexander Todorov

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Further patches have been submitted by:
   Ville Skytta <ville-dot-skytta-at-iki-dot-fi>
   Mark Johnson <johnson-dot-nh-at-gmail-dot-com>
   Cole Robinson <crobinso-at-redhat-dot-com>
+  Alexander Todorov <atodorov-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
