Fixed a number of typos in manual page & documentation (Atsushi SAKAI)

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -61,7 +61,7 @@ on the host.
 
 =head1 AUTHOR
 
-Writen by Daniel P. Berrange.
+Written by Daniel P. Berrange.
 
 =head1 BUGS
 
@@ -69,7 +69,7 @@ Report bugs to the mailing list C<http://www.redhat.com/mailman/listinfo/et-mgmt
 
 =head1 COPYRIGHT
 
-Copright (C) 2006-2007 Red Hat, Inc, and various contributors.
+Copyright (C) 2006-2007 Red Hat, Inc, and various contributors.
 This is free software. You may redistribute copies of it under the terms of the GNU General
 Public License C<http://www.gnu.org/licenses/gpl.html>. There is NO WARRANTY, to the extent
 permitted by law.
