--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ order / importance:
 
  1. Handle renaming of domains. Libvirt caches the name when you get
     the initial handle to the domain, so this may be more difficult
-    than it seems - particularly since we really want to minimse as
+    than it seems - particularly since we really want to minimize as
     may XenD RPC/HTTP calls as possible
 
  2. Implement tracking of network & disk stats. Needs support in 
